--- a/templates/home.html
+++ b/templates/home.html
@@ -12,16 +12,23 @@
 
 </head>
 <body>
-    
     <div>
-
+      <a class="btn btn-outline-warning btn-lg" href="/" role="button">Dashboard</a>
+      <a class="btn btn-outline-warning btn-lg" href="/Projects" role="button">Projects</a>
+      <a class="btn btn-outline-warning btn-lg" href="/Profiles" role="button">Profiles</a>
+      <a class="btn btn-outline-warning btn-lg" href="/Resume" role="button">Resume</a>
+      <a class="btn btn-outline-warning btn-lg" href="/Contact" role="button">Contact</a>
       <video poster="static/h.png" loop muted autoplay>
         <source src="static/h.mp4" type="video/mp4">
          
         </video>
       <div class="container">
+        <img src="static/prof.png" style="height:250px; border-radius: 30%; border: 10px solid #FEDE00;" alt="Profile Photo of Tushar">
         <p>I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
       </div>
+    </div>
+    <div>
+      
     </div>
   <script src='static/js/autotype.js'></script> 
 </body>
